# swuc-client

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust-release-build.yml  rust.yml
src/: changelog.rs  cli.rs  config.rs  crypto.rs  lib.rs  main.rs  search.rs  storage.rs  update.rs
