[package]
name = "swuc"
version = "0.2.0"
edition = "2021"

[dependencies]
anyhow = "1.0.97"
base64 = "0.22.1"
chrono = "0.4.40"
clap = "4.5.32"
directories = "6.0.0"
dirs = "6.0.0"
ecies = { version = "0.2", default-features = false, features = ["pure", "std"] }
notify-rust = "4.11.7"
serde = "1.0.219"
serde_json = "1.0.140"
tungstenite = "0.26.2"
url = "2.5.4"
